objects/Account_Plan_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plan Activities</relationshipLabel>
        <relationshipName>Account_Plan_Activitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InEditMode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>InEditMode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Plan Activity</label>
    <nameField>
        <label>Account Plan Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>